# caffe

include/caffe/layers/: base_data_layer.hpp  image_data_layer.hpp  proposal_layer.hpp  roi_pooling_layer.hpp  smoothl1_loss_layer.hpp  softmax_layer.hpp  softmax_loss_layer.hpp
inference/: CMakeLists.txt  demo.cpp  run_demo.sh
inference/config/: car.yml  plate.yml  pvanet.yml
inference/lib/: CMakeLists.txt  classify.cpp  classify.hpp  inference.cpp  inference.hpp  pvanet.cpp  pvanet.hpp
python/: classify.py  gen_train_configs.py  run_classify.sh  update_solver.py
src/caffe/: data_transformer.cpp  solver.cpp
src/caffe/layers/: accuracy_layer.cpp  accuracy_layer.cu  base_data_layer.cpp  base_data_layer.cu  center_loss_layer.cpp  image_data_layer.cpp  proposal_layer.cpp  proposal_layer.cu  shared_center_loss_layer.cpp  smooth_L1_loss_layer.cpp  smooth_L1_loss_layer.cu  softmax_loss_layer.cpp  softmax_loss_layer.cu  spatial_dropout_layer.cpp
src/caffe/proto/: caffe.proto
src/caffe/solvers/: sgd_solver.cpp
src/caffe/util/: io.cpp  math_functions.cpp
